"""
AuraLink AIC Protocol - Integration Tests
Tests for AI-driven compression functionality
"""

import pytest
import asyncio
import time
from typing import Dict, Any

# Mock imports for testing
# In production, these would be actual imports
from unittest.mock import Mock, AsyncMock, patch


# ================================================================
# Test Fixtures
# ================================================================

@pytest.fixture
async def compression_engine():
    """Fixture for compression engine"""
    from app.services.compression_engine import NeuralCompressionEngine
    
    engine = NeuralCompressionEngine(
        model_type="encodec",
        model_version="v1.0",
        use_gpu=False,  # Use CPU for tests
        enable_fallback=True
    )
    await engine.initialize()
    yield engine


@pytest.fixture
def sample_frame():
    """Fixture for sample video frame"""
    from app.services.compression_engine import Frame, FrameType
    
    # Create a 1MB sample frame
    frame_data = b"x" * (1024 * 1024)
    
    return Frame(
        data=frame_data,
        frame_type=FrameType.VIDEO,
        width=1920,
        height=1080,
        fps=30,
        codec="H264",
        timestamp=int(time.time() * 1000000),
        is_keyframe=True
    )


@pytest.fixture
def network_conditions():
    """Fixture for network conditions"""
    from app.services.compression_engine import NetworkConditions
    
    return NetworkConditions(
        available_bandwidth_kbps=5000,
        rtt_ms=50,
        packet_loss_percent=0.5,
        jitter_ms=10.0
    )


# ================================================================
# Compression Engine Tests
# ================================================================

@pytest.mark.asyncio
async def test_compression_engine_initialization(compression_engine):
    """Test that compression engine initializes correctly"""
    assert compression_engine.model_loaded is True
    assert compression_engine.model_type == "encodec"
    assert compression_engine.total_frames.load() == 0


@pytest.mark.asyncio
async def test_basic_compression(compression_engine, sample_frame, network_conditions):
    """Test basic frame compression"""
    from app.services.compression_engine import CompressionMode
    
    result = await compression_engine.compress_frame(
        frame=sample_frame,
        mode=CompressionMode.ADAPTIVE,
        target_ratio=0.80,
        network=network_conditions,
        min_quality=0.85
    )
    
    # Verify compression occurred
    assert result.compressed_size < result.original_size
    assert result.compression_ratio >= 0.75  # At least 75% reduction
    assert result.quality_score >= 0.85
    assert result.inference_latency_ms < 50  # Within latency budget
    assert result.fallback_used is False


@pytest.mark.asyncio
async def test_compression_modes(compression_engine, sample_frame, network_conditions):
    """Test different compression modes"""
    from app.services.compression_engine import CompressionMode
    
    modes = [
        CompressionMode.CONSERVATIVE,
        CompressionMode.ADAPTIVE,
        CompressionMode.AGGRESSIVE
    ]
    
    results = []
    for mode in modes:
        result = await compression_engine.compress_frame(
            frame=sample_frame,
            mode=mode,
            target_ratio=0.80,
            network=network_conditions,
            min_quality=0.70
        )
        results.append((mode, result))
    
    # Conservative should have best quality
    conservative_result = results[0][1]
    aggressive_result = results[2][1]
    
    assert conservative_result.quality_score >= aggressive_result.quality_score
    # Aggressive should have better compression
    assert aggressive_result.compression_ratio >= conservative_result.compression_ratio


@pytest.mark.asyncio
async def test_quality_fallback(compression_engine, sample_frame, network_conditions):
    """Test fallback when quality threshold not met"""
    from app.services.compression_engine import CompressionMode
    
    # Set very high quality threshold
    result = await compression_engine.compress_frame(
        frame=sample_frame,
        mode=CompressionMode.AGGRESSIVE,
        target_ratio=0.95,  # Very aggressive
        network=network_conditions,
        min_quality=0.98  # Very high threshold
    )
    
    # Should trigger fallback
    assert result.fallback_used is True
    assert result.fallback_reason is not None
    assert "quality" in result.fallback_reason.lower()


@pytest.mark.asyncio
async def test_network_adaptation(compression_engine, sample_frame):
    """Test adaptation to different network conditions"""
    from app.services.compression_engine import CompressionMode, NetworkConditions
    
    # Poor network
    poor_network = NetworkConditions(
        available_bandwidth_kbps=500,  # Very low
        rtt_ms=200,
        packet_loss_percent=5.0,
        jitter_ms=50.0
    )
    
    result_poor = await compression_engine.compress_frame(
        frame=sample_frame,
        mode=CompressionMode.ADAPTIVE,
        target_ratio=0.80,
        network=poor_network,
        min_quality=0.70
    )
    
    # Good network
    good_network = NetworkConditions(
        available_bandwidth_kbps=10000,  # High
        rtt_ms=20,
        packet_loss_percent=0.1,
        jitter_ms=5.0
    )
    
    result_good = await compression_engine.compress_frame(
        frame=sample_frame,
        mode=CompressionMode.ADAPTIVE,
        target_ratio=0.80,
        network=good_network,
        min_quality=0.85
    )
    
    # Poor network should use more aggressive compression
    assert result_poor.compression_ratio >= result_good.compression_ratio


@pytest.mark.asyncio
async def test_compression_hints(compression_engine, network_conditions):
    """Test compression hints generation"""
    from app.services.compression_engine import CompressionMode
    
    metadata = {
        "width": 1920,
        "height": 1080,
        "fps": 30,
        "is_keyframe": True
    }
    
    hints = await compression_engine.get_compression_hints(
        frame_metadata=metadata,
        network=network_conditions,
        mode=CompressionMode.ADAPTIVE
    )
    
    assert hints.recommended_ratio > 0.0
    assert hints.recommended_ratio <= 1.0
    assert hints.predicted_quality > 0.0
    assert hints.predicted_quality <= 1.0
    assert hints.confidence > 0.0
    assert hints.confidence <= 1.0
    assert hints.recommended_codec in ["H264", "VP9"]


@pytest.mark.asyncio
async def test_statistics_tracking(compression_engine, sample_frame, network_conditions):
    """Test that statistics are tracked correctly"""
    from app.services.compression_engine import CompressionMode
    
    initial_frames = compression_engine.total_frames.load()
    
    # Compress multiple frames
    for _ in range(5):
        await compression_engine.compress_frame(
            frame=sample_frame,
            mode=CompressionMode.ADAPTIVE,
            target_ratio=0.80,
            network=network_conditions,
            min_quality=0.85
        )
    
    stats = compression_engine.get_statistics()
    
    assert stats["total_frames_processed"] == initial_frames + 5
    assert stats["avg_inference_ms"] > 0
    assert stats["fallback_rate_percent"] >= 0


# ================================================================
# Performance Benchmarks
# ================================================================

@pytest.mark.benchmark
@pytest.mark.asyncio
async def test_compression_latency_benchmark(compression_engine, sample_frame, network_conditions):
    """Benchmark compression latency"""
    from app.services.compression_engine import CompressionMode
    
    latencies = []
    num_iterations = 100
    
    for _ in range(num_iterations):
        start = time.time()
        
        result = await compression_engine.compress_frame(
            frame=sample_frame,
            mode=CompressionMode.ADAPTIVE,
            target_ratio=0.80,
            network=network_conditions,
            min_quality=0.85
        )
        
        latency_ms = (time.time() - start) * 1000
        latencies.append(latency_ms)
    
    avg_latency = sum(latencies) / len(latencies)
    p95_latency = sorted(latencies)[int(len(latencies) * 0.95)]
    p99_latency = sorted(latencies)[int(len(latencies) * 0.99)]
    
    print(f"\nLatency Benchmark Results:")
    print(f"  Average: {avg_latency:.2f}ms")
    print(f"  P95: {p95_latency:.2f}ms")
    print(f"  P99: {p99_latency:.2f}ms")
    
    # Assert performance targets
    assert avg_latency < 20, f"Average latency {avg_latency}ms exceeds 20ms target"
    assert p95_latency < 30, f"P95 latency {p95_latency}ms exceeds 30ms target"


@pytest.mark.benchmark
@pytest.mark.asyncio
async def test_compression_ratio_benchmark(compression_engine, sample_frame, network_conditions):
    """Benchmark compression ratio"""
    from app.services.compression_engine import CompressionMode
    
    result = await compression_engine.compress_frame(
        frame=sample_frame,
        mode=CompressionMode.ADAPTIVE,
        target_ratio=0.80,
        network=network_conditions,
        min_quality=0.85
    )
    
    bandwidth_reduction = (1 - (result.compressed_size / result.original_size)) * 100
    
    print(f"\nCompression Benchmark Results:")
    print(f"  Original Size: {result.original_size / 1024:.2f}KB")
    print(f"  Compressed Size: {result.compressed_size / 1024:.2f}KB")
    print(f"  Bandwidth Reduction: {bandwidth_reduction:.1f}%")
    print(f"  Quality Score: {result.quality_score:.3f}")
    print(f"  PSNR: {result.psnr_db:.2f}dB")
    
    # Assert compression targets
    assert bandwidth_reduction >= 75, f"Bandwidth reduction {bandwidth_reduction}% below 75% target"
    assert result.quality_score >= 0.85, f"Quality score {result.quality_score} below 0.85 target"


# ================================================================
# gRPC Integration Tests
# ================================================================

@pytest.mark.integration
@pytest.mark.asyncio
async def test_grpc_compress_frame():
    """Test gRPC CompressFrame endpoint"""
    # Mock gRPC client
    # In production, this would connect to actual gRPC server
    
    # This is a placeholder for actual gRPC test
    # Would require running gRPC server
    pass


@pytest.mark.integration
@pytest.mark.asyncio
async def test_grpc_stream_compression():
    """Test gRPC streaming compression"""
    # Mock streaming gRPC
    pass


# ================================================================
# Database Integration Tests
# ================================================================

@pytest.mark.integration
@pytest.mark.asyncio
async def test_metrics_storage():
    """Test storing compression metrics in database"""
    # This would test actual database operations
    # Requires test database setup
    pass


@pytest.mark.integration
@pytest.mark.asyncio
async def test_config_crud():
    """Test CRUD operations for AIC configuration"""
    # Test create, read, update, delete operations
    pass


# ================================================================
# End-to-End Tests
# ================================================================

@pytest.mark.e2e
@pytest.mark.asyncio
async def test_complete_compression_pipeline():
    """Test complete compression pipeline end-to-end"""
    # This would test:
    # 1. WebRTC captures frame
    # 2. Sends to AI Core via gRPC
    # 3. AI Core compresses
    # 4. Returns compressed data
    # 5. Metrics saved to database
    # 6. Dashboard displays stats
    pass


# ================================================================
# Stress Tests
# ================================================================

@pytest.mark.stress
@pytest.mark.asyncio
async def test_concurrent_compression(compression_engine, sample_frame, network_conditions):
    """Test handling multiple concurrent compression requests"""
    from app.services.compression_engine import CompressionMode
    
    num_concurrent = 50
    
    tasks = [
        compression_engine.compress_frame(
            frame=sample_frame,
            mode=CompressionMode.ADAPTIVE,
            target_ratio=0.80,
            network=network_conditions,
            min_quality=0.85
        )
        for _ in range(num_concurrent)
    ]
    
    start = time.time()
    results = await asyncio.gather(*tasks)
    duration = time.time() - start
    
    # All should succeed
    assert len(results) == num_concurrent
    assert all(r.compressed_size < r.original_size for r in results if not r.fallback_used)
    
    print(f"\nConcurrent Compression Test:")
    print(f"  Requests: {num_concurrent}")
    print(f"  Duration: {duration:.2f}s")
    print(f"  Throughput: {num_concurrent / duration:.2f} req/s")


# ================================================================
# Quality Tests
# ================================================================

@pytest.mark.quality
@pytest.mark.asyncio
async def test_visual_quality_preservation(compression_engine, sample_frame, network_conditions):
    """Test that visual quality is preserved"""
    from app.services.compression_engine import CompressionMode
    
    result = await compression_engine.compress_frame(
        frame=sample_frame,
        mode=CompressionMode.ADAPTIVE,
        target_ratio=0.80,
        network=network_conditions,
        min_quality=0.85
    )
    
    # Check quality metrics
    assert result.quality_score >= 0.85, "Quality score below threshold"
    assert result.psnr_db >= 30, "PSNR below acceptable level"
    assert result.ssim >= 0.85, "SSIM below threshold"


# ================================================================
# Utility Functions
# ================================================================

def generate_test_report(results: Dict[str, Any]):
    """Generate test report"""
    report = """
    ╔═══════════════════════════════════════════════════════════╗
    ║         AuraLink AIC Protocol - Test Report               ║
    ╚═══════════════════════════════════════════════════════════╝
    
    Performance Metrics:
    ───────────────────────────────────────────────────────────
    """
    return report


if __name__ == "__main__":
    pytest.main([__file__, "-v", "-s", "--tb=short"])
